Cherry-pick 282657@main (dcc8d978d725). https://bugs.webkit.org/show_bug.cgi?id=278356

REGRESSION (280738@main) [WebCodecs] Audio and Video codecs can be garbage collected with pending work.
    https://bugs.webkit.org/show_bug.cgi?id=278356
    rdar://134297589

    Reviewed by Youenn Fablet.

    In 280738@main http/wpt/webcodecs/hevc-encoder-config.https.any.html
    became flaky. This is because the VideoEncoder object goes out of scope
    as soon as the configure steps schedule the control message to reject
    the configuration and sometimes gets garbage collected before the error
    callback can be called. Prior to 280738@main the callback was a GC root
    and so would never be collected. After this, though, the codec is
    responsible for keeping its JS callbacks alive and so sometimes
    everything gets collected.

    Many of the WebCodecs steps require asynchronous work to be scheduled
    which gives the algorithms many states where it is valid to have
    outstanding work but all references to the codecs have been dropped in
    JavaScript. In order to prevent them from being prematurely collected
    this patch introduces an abstraction for the WebCodecs Control Message.
    This object represents pending work and will hold a PendingActivity
    for the codec which will prevent it from being garbage collected before
    the spec algorithm steps have been completed. Additionally, we will
    create a pending activity when we submit asynchronous work to the
    internal codec implementation.

    * LayoutTests/TestExpectations:
    * LayoutTests/platform/ios/TestExpectations:
    * LayoutTests/platform/mac-wk2/TestExpectations:
    * Source/WebCore/Modules/webcodecs/WebCodecsAudioDecoder.cpp:
    (WebCore::WebCodecsAudioDecoder::configure):
    (WebCore::WebCodecsAudioDecoder::decode):
    (WebCore::WebCodecsAudioDecoder::flush):
    (WebCore::WebCodecsAudioDecoder::closeDecoder):
    (WebCore::WebCodecsAudioDecoder::resetDecoder):
    (WebCore::WebCodecsAudioDecoder::queueControlMessageAndProcess):
    (WebCore::WebCodecsAudioDecoder::virtualHasPendingActivity const):
    * Source/WebCore/Modules/webcodecs/WebCodecsAudioDecoder.h:
    * Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.cpp:
    (WebCore::WebCodecsAudioEncoder::configure):
    (WebCore::WebCodecsAudioEncoder::encode):
    (WebCore::WebCodecsAudioEncoder::flush):
    (WebCore::WebCodecsAudioEncoder::closeEncoder):
    (WebCore::WebCodecsAudioEncoder::resetEncoder):
    (WebCore::WebCodecsAudioEncoder::queueControlMessageAndProcess):
    (WebCore::WebCodecsAudioEncoder::virtualHasPendingActivity const):
    * Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.h:
    * Source/WebCore/Modules/webcodecs/WebCodecsControlMessage.h: Added.
    * Source/WebCore/Modules/webcodecs/WebCodecsFlushPromise.h: Added.
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoDecoder.cpp:
    (WebCore::WebCodecsVideoDecoder::configure):
    (WebCore::WebCodecsVideoDecoder::decode):
    (WebCore::WebCodecsVideoDecoder::flush):
    (WebCore::WebCodecsVideoDecoder::closeDecoder):
    (WebCore::WebCodecsVideoDecoder::resetDecoder):
    (WebCore::WebCodecsVideoDecoder::queueControlMessageAndProcess):
    (WebCore::WebCodecsVideoDecoder::virtualHasPendingActivity const):
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoDecoder.h:
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.cpp:
    (WebCore::WebCodecsVideoEncoder::configure):
    (WebCore::WebCodecsVideoEncoder::encode):
    (WebCore::WebCodecsVideoEncoder::flush):
    (WebCore::WebCodecsVideoEncoder::closeEncoder):
    (WebCore::WebCodecsVideoEncoder::resetEncoder):
    (WebCore::WebCodecsVideoEncoder::queueControlMessageAndProcess):
    (WebCore::WebCodecsVideoEncoder::virtualHasPendingActivity const):
    * Source/WebCore/Modules/webcodecs/WebCodecsVideoEncoder.h:
    * Source/WebCore/WebCore.xcodeproj/project.pbxproj:

    Canonical link: https://commits.webkit.org/282657@main

Canonical link: https://commits.webkit.org/282416.59@webkitglib/2.46