Source/WebCore/Modules/webcodecs/WebCodecsAudioEncoder.h
@@ -34,6 +34,7 @@
 #include "JSDOMPromiseDeferredForward.h"
 #include "WebCodecsAudioEncoderConfig.h"
 #include "WebCodecsCodecState.h"
+#include "WebCodecsControlMessage.h"
 #include <wtf/RefCounted.h>
 #include <wtf/Vector.h>
 
@@ -96,13 +97,12 @@ private:
     void setInternalEncoder(UniqueRef<AudioEncoder>&&);
     void scheduleDequeueEvent();
 
-    void queueControlMessageAndProcess(Function<void()>&&);
+    void queueControlMessageAndProcess(WebCodecsControlMessage<WebCodecsAudioEncoder>&&);
     void processControlMessageQueue();
     WebCodecsEncodedAudioChunkMetadata createEncodedChunkMetadata();
 
     WebCodecsCodecState m_state { WebCodecsCodecState::Unconfigured };
     size_t m_encodeQueueSize { 0 };
-    size_t m_beingEncodedQueueSize { 0 };
     Ref<WebCodecsEncodedAudioChunkOutputCallback> m_output;
     Ref<WebCodecsErrorCallback> m_error;
     std::unique_ptr<AudioEncoder> m_internalEncoder;
@@ -110,12 +110,11 @@ private:
     Deque<Ref<DeferredPromise>> m_pendingFlushPromises;
     size_t m_clearFlushPromiseCount { 0 };
     bool m_isKeyChunkRequired { false };
-    Deque<Function<void()>> m_controlMessageQueue;
+    Deque<WebCodecsControlMessage<WebCodecsAudioEncoder>> m_controlMessageQueue;
     bool m_isMessageQueueBlocked { false };
     WebCodecsAudioEncoderConfig m_baseConfiguration;
     AudioEncoder::ActiveConfiguration m_activeConfiguration;
     bool m_hasNewActiveConfiguration { false };
-    bool m_isFlushing { false };
 };
 
 }
